# portfolio

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  biome.json  config.py  eslint.config.js  package-lock.json  package.json  pyproject.toml  vercel.json
.github/: dependabot.yml
.github/workflows/: backend.yml  code-checks.yml  docker.yml  frontend.yml  vercel.yml
app/: __init__.py  form.py  views.py
app/static/css/: styles.css
app/static/js/: accessibility.js  activeTab.js  animation.js  loading.js  mail.js  navbar.js  projectCards.js  scrollUtils.js  typingEffect.js  vanta.js
app/templates/: home.html
