[project]
name = "portfolio"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.0.3",
    "flask-mail>=0.10.0",
    "flask-wtf>=1.2.1",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]

[tool.ruff.lint]
select=["ALL"]
ignore=["D100", "D101", "D103", "D104"]